tests/snapshots/generate_plan_tests__node_custom_version.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "CI": "true",
    "NIXPACKS_METADATA": "node",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cacheDirectories": [
        "node_modules/.cache"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "npm ci"
      ],
      "cacheDirectories": [
        "/root/.npm"
      ],
      "paths": [
        "/app/node_modules/.bin"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "nodejs-18_x",
        "npm-8_x",
        "openssl"
      ],
      "nixOverlays": [
        "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
      ],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "npm run start"
  }
}
