tests/snapshots/generate_plan_tests__node_main_file_doesnt_exist.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "variables": {
    "CI": "true",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "nodejs"
        },
        {
          "name": "npm-8_x",
          "overlay": "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
        }
      ]
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "npm i"
      ],
      "cacheDirectories": [
        "/root/.npm"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cacheDirectories": [
        "node_modules/.cache"
      ]
    }
  ],
  "startPhase": {
    "cmd": "node index.js"
  }
}
