tests/snapshots/generate_plan_tests__node_no_lockfile.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "ghcr.io/railwayapp/nixpacks:debian-1657820962",
  "variables": {
    "CI": "true",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "phases": [
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "npm i"
      ],
      "cacheDirectories": [
        "/root/.npm"
      ]
    },
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "nodejs"
        },
        {
          "name": "npm-8_x",
          "overlay": "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
        }
      ],
      "nixLibraries": [
        "libuuid",
        "libGL"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cacheDirectories": [
        "node_modules/.cache"
      ]
    }
  ],
  "startPhase": {
    "cmd": "npm run start"
  }
}
